	  support/regression/tests/gcc-torture-execute-20001112-1.c
	  support/regression/tests/gcc-torture-execute-20101013-1.c:
	  long long for hc08.
	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-pr47337.c,
	  support/regression/tests/gcc-torture-execute-961213-1.c:
	  Fixed bug #3513892.
	* src/SDCCralloc.hpp:
	  Additional assertions to track down #3475617.

2012-04-01 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  device/lib/*/stubs.s,
	  device/lib/_divslonglong_rrx_s.c,
	  device/lib/_rrslonglong_rrx_s.c,
	  support/regression/tests/gcc-torture-execute-20101013-1.c,
	  support/regression/tests/gcc-torture-execute-950512-1.c:
	  long long division.
	* support/regression/tests/gcc-torture-execute-920612-1.c,
	  support/regression/tests/gcc-torture-execute-920711-1.c:
	  Disable tests for gcc older than 5.0.
	* support/regression/tests/longlong.c,
	  support/regression/tests/gcc-torture-execute-960801-1.c,
	  support/regression/tests/longlong.c:
	  Disable long long tests since they fail on 32-bit systems.

2012-03-31 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c, src/SDCCgen.h, src/ds390/gen.c,
	  src/ds390/main.c, src/hc08/gen.c, src/hc08/main.c,
	  src/mcs51/gen.c, src/pic14/gen.c, src/pic16/gen.c,
	  src/z80/gen.c, src/z80/gen.h:
	  introduced labelKey2num label handling macro

2012-03-30 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, src/Makefile.in, src/SDCCgen.c, src/SDCCgen.h,
	  src/SDCCasm.c, src/SDCCasm.h, src/SDCCdebug.c,
	  src/SDCCdebug.h, src/SDCCpeeph.c, src/SDCCpeeph.h,
	  src/avr/gen.c, src/ds390/gen.c, src/ds390/gen.h,
	  src/ds390/main.c, src/ds390/main.h, src/hc08/gen.c,
	  src/mcs51/gen.c, src/mcs51/main.c, src/mcs51/main.h,
	  src/pic14/gen.c, src/pic16/gen.c, src/z80/gen.c:
	  unification of target code generation

2012-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z180/stubs.s,
	  device/lib/z80/stubs.s,
	  device/lib/gbz80/stubs.s,